# genshin-inputmethod-dictionary

./: .gitignore  .gitmodules  Cargo.toml  README.md  additional_dictionary.txt
.github/workflows/: build_and_release.yml
src/: lib.rs  main.rs  model.rs
