[package]
name = "genshin-inputmethod-dictionary"
version = "0.2.0"
edition = "2024"
author = "MoRanYue"
about = "Dump text from dvaJi/genshin-data project"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
